Bug 1111753 - Don't restrict the dirty rect stored for display items for out-of-flow elements to their visual overflow areas. r=tn, a=sledru